@@ -11,12 +11,14 @@ importFrom("multcomp", "cftest", "adjusted_calpha", "univariate_calpha", "glht")
 importFrom("stats", "model.matrix", "coef", "vcov", "nobs", "predict", "quantile", "na.omit",
            "logLik", "model.response", "model.weights", "model.offset", "terms", "as.formula",
            "printCoefmat", "qqline", "qqplot", "qunif", "variable.names", "pchisq",
-           "model.frame", "pnorm", "qnorm", "sigma", "residuals", "qchisq", "approx", "spline")
+           "model.frame", "pnorm", "qnorm", "sigma", "residuals", "qchisq", "approx", "spline",
+           "confint", "relevel", "resid")
 import("Matrix")
 importFrom("survival", "survfit", "Surv")
 importFrom("graphics", "plot", "lines", "polygon")
 
-export(tram, tram_data, Coxph, Colr, Polr, Lm, BoxCox, Survreg, Lehmann, mtram, score_test)
+export(tram, tram_data, Coxph, Colr, Polr, Lm, BoxCox, Survreg, Lehmann, 
+       mtram, score_test, perm_test, PI)
 
 S3method("as.mlt", "tram")
 S3method("model.matrix", "tram")
@@ -40,6 +42,6 @@ S3method("update", "tram")
 S3method("residuals", "tram")
 S3method("profile", "tram")
 S3method("score_test", "tram")
+S3method("perm_test", "tram")
 S3method("confint", "htest")
 S3method("confint", "htests")
-
